--- a/recipes/insectOR.yml
+++ b/recipes/insectOR.yml
@@ -5,35 +5,25 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
-  - biopython=1.76=py27h516909a_0
   - bzip2=1.0.8=hd590300_5
-  - ca-certificates=2024.2.2=hbcca054_0
+  - ca-certificates=2024.6.2=hbcca054_0
   - certifi=2019.11.28=py27h8c360ce_1
-  - expat=2.6.2=h59595ed_0
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=h77eed37_2
-  - fontconfig=2.14.2=h14ed4e7_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
+  - expat=2.2.10=h9c3ff4c_0
+  - fontconfig=2.13.1=hba837de_1005
   - freetype=2.12.1=h267a509_2
   - ghostscript=9.18=1
   - giflib=5.2.2=hd590300_0
   - glib=2.80.2=hf974151_0
   - glib-tools=2.80.2=hb6ce0ca_0
   - hmmer=3.4=hdbdd923_1
-  - icu=68.2=h9c3ff4c_0
+  - icu=64.2=he1b5a44_1
   - jpeg=9e=h0b41bf4_3
-  - lerc=4.0.0=h27087fc_0
   - libblas=3.9.0=22_linux64_openblas
   - libcblas=3.9.0=22_linux64_openblas
-  - libdeflate=1.14=h166bdaf_0
-  - libexpat=2.6.2=h59595ed_0
   - libffi=3.4.2=h7f98852_5
   - libgcc=7.2.0=h69d50b8_2
   - libgcc-ng=13.2.0=h77fa898_7
-  - libgd=2.3.3=h6ad9fb6_0
+  - libgd=2.2.5=h307a58e_1007
   - libgfortran-ng=13.2.0=h69a702a_7
   - libgfortran5=13.2.0=hca663fb_7
   - libglib=2.80.2=hf974151_0
@@ -43,18 +33,18 @@ dependencies:
   - libopenblas=0.3.27=pthreads_h413a1c8_0
   - libpng=1.6.43=h2797004_0
   - libstdcxx-ng=13.2.0=hc0a3c3a_7
-  - libtiff=4.4.0=h82bc61c_5
+  - libtiff=4.1.0=hc3755c2_3
   - libuuid=2.38.1=h0b41bf4_0
-  - libwebp=1.2.4=h522a892_0
-  - libwebp-base=1.2.4=h166bdaf_0
-  - libxml2=2.9.12=h72842e0_0
-  - libxslt=1.1.33=h15afd5d_2
+  - libwebp=1.0.2=h56121f0_5
+  - libxml2=2.9.10=hee79883_0
+  - libxslt=1.1.33=h31b3aaa_0
   - libzlib=1.2.13=h4ab18f5_6
-  - meme=5.4.1=py27pl5262h3657f31_0
+  - lz4-c=1.9.3=h9c3ff4c_1
+  - meme=5.3.0=py27pl526h53063a7_0
   - mpi=1.0=openmpi
   - ncurses=6.5=h59595ed_0
   - numpy=1.16.5=py27h95a1406_0
-  - openmpi=4.1.6=hc5af2df_101
+  - openmpi=4.0.5=h9b22176_4
   - openssl=1.0.2u=h516909a_0
   - pcre2=10.43=hcad00b1_0
   - perl=5.26.2=h36c2ea0_1008
@@ -72,7 +62,7 @@ dependencies:
   - perl-file-spec=3.48_01=pl526_1
   - perl-file-temp=0.2304=pl526_2
   - perl-file-which=1.23=pl526_0
-  - perl-gd=2.68=pl526he941832_0
+  - perl-gd=2.71=pl526he860b03_0
   - perl-gdgraph=1.54=pl526_0
   - perl-gdtextutil=0.86=pl526h14c3975_5
   - perl-getopt-long=2.50=pl526_1
@@ -91,7 +81,7 @@ dependencies:
   - perl-tie-ixhash=1.23=pl526_2
   - perl-types-serialiser=1.0=pl526_2
   - perl-xml-namespacesupport=1.12=pl526_0
-  - perl-xml-parser=2.44_01=pl5262hc3e0081_1002
+  - perl-xml-parser=2.44=pl526h4e0c4b3_7
   - perl-xml-sax=1.02=pl526_0
   - perl-xml-sax-base=1.09=pl526_0
   - perl-xml-sax-expat=0.51=pl526_3
@@ -110,5 +100,5 @@ dependencies:
   - xz=5.2.6=h166bdaf_0
   - yaml=0.2.5=h7f98852_2
   - zlib=1.2.13=h4ab18f5_6
-  - zstd=1.5.6=ha6fb4c9_0
-prefix: /home/aewebb/miniforge3/envs/insectOR
+  - zstd=1.4.9=ha95c52a_0
+prefix: /home/aewebb80/miniforge3/envs/insectOR
