--- a/.conda/pipemake_utils/meta.yaml
+++ b/.conda/pipemake_utils/meta.yaml
@@ -32,11 +32,11 @@ source:
 requirements:
   host:
     - pip
-    - python >=3.8,<3.12
+    - python >=3.8
     - conda-forge/label/python_rc::_python_rc
   run:
     - pip
-    - python >=3.8,<3.12
+    - python >=3.8
     - conda-forge::python_abi
     - bioconda::gffutils >=0.13
     - conda-forge::biopython >=1.84
