--- a/.conda/pipemake_utils/meta.yaml
+++ b/.conda/pipemake_utils/meta.yaml
@@ -44,6 +44,7 @@ requirements:
     - conda-forge::pandas >=2.2.3
     - conda-forge::numpy >=2.1.3
     - conda-forge::scipy >=1.14.1
+    - conda-forge::pyyaml >=6.0.2
 
 test:
   imports:
