add bedtools, cleanup bcftools

--- a/recipes/Docker/bcftools/v1.20/Dockerfile
+++ b/recipes/Docker/bcftools/v1.20/Dockerfile
@@ -1,5 +1,4 @@
 FROM continuumio/miniconda3
 ENV PATH /opt/conda/envs/bcftools/bin:$PATH
-COPY bcftools.yml .
-RUN conda env create -f bcftools.yml
+RUN conda create -n bcftools -c conda-forge bioconda::bcftools=1.20
 RUN echo "source activate bcftools" > ~/.bashrc
